# Warmup

./: .gitignore  admin.py  bnf.md  db.py  firebase.py  main.py  parser.py  prediction_markets.json  pyproject.toml
