[project]
name = "warmup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pylint>=4.0.4",
    "pyparsing>=3.3.1",
    "pyright>=1.1.408",
    "tabulate>=0.9.0",
]

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']
